Adjust gallery overflow issue on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -505,11 +505,10 @@ input[type=text] {
         clear: both;
         line-height: 2;
         column-count: 2;
-        column-gap: 1px;
+        column-gap: 5px;
         display: inline-block;
         margin: 10px;
         padding: 10px;
-        height: fit-content;
     }
 
     #clothing-section-image {
